welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:6: error: '}' expected but 'case' found.
     case nbBiscuits >= 3 => gauche();
     ^Poucet:7: error: 'while' expected but 'case' found.
     case nbBiscuits <= 2 => droite(); }
     ^Poucet:7: error: '(' expected but ';' found.
     case nbBiscuits <= 2 => droite(); }
                                     ^Poucet:12: error: eof expected but '}' found.
}
^